--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <main>
     <section id="articles">
-      <!-- Artikel dari Supabase akan muncul di sini -->
+      <!-- Artikel akan tampil di sini -->
     </section>
   </main>
 
