--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pertumbuhan Iman Kristen</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="manifest" href="manifest.json">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Pertumbuhan Iman</title>
+<link rel="manifest" href="manifest.json">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Pertumbuhan Iman Kristen</h1>
-  </header>
+<header>
+  <h1>Pertumbuhan Iman Kristen</h1>
+</header>
 
-  <main>
-    <section id="articles">
-      <!-- Artikel akan tampil di sini -->
-    </section>
-  </main>
+<nav>
+  <a href="renungan.html">Renungan Harian</a>
+  <a href="kesaksian.html">Kesaksian</a>
+  <a href="lagu.html">Lagu Rohani</a>
+</nav>
 
-  <footer>
-    <p>&copy; 2026 Pertumbuhan Iman Kristen</p>
-  </footer>
+<section>
+  <h2>Selamat Datang</h2>
+  <p>Platform renungan, kesaksian, dan lagu rohani untuk membangun iman setiap hari.</p>
+</section>
 
-  <script src="app.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
