--- a/kesaksian.html
+++ b/kesaksian.html
@@ -8,22 +8,38 @@
 <body>
 
 <h2>Kesaksian Iman</h2>
-<div id="kesaksian"></div>
+<div id="kesaksian">Memuat...</div>
 
 <script>
-fetch("https://api.rss2json.com/v1/api.json?rss_url=https://www.sabda.org/rss")
+const url = "https://api.allorigins.win/get?url=" + 
+encodeURIComponent("https://www.sabda.org/rss");
+
+fetch(url)
 .then(res => res.json())
 .then(data => {
+  const parser = new DOMParser();
+  const xml = parser.parseFromString(data.contents, "text/xml");
+  const items = xml.querySelectorAll("item");
+
   let output = "";
-  data.items.slice(0,5).forEach(item => {
-    output += `
-      <div class="card">
-        <h3>${item.title}</h3>
-        <a href="${item.link}" target="_blank">Baca Kesaksian</a>
-      </div>
-    `;
+  items.forEach((item, index) => {
+    if(index < 5){
+      output += `
+        <div class="card">
+          <h3>${item.querySelector("title").textContent}</h3>
+          <a href="${item.querySelector("link").textContent}" target="_blank">
+          Baca Kesaksian
+          </a>
+        </div>
+      `;
+    }
   });
+
   document.getElementById("kesaksian").innerHTML = output;
+})
+.catch(err => {
+  document.getElementById("kesaksian").innerHTML = 
+  "Gagal memuat kesaksian. Coba refresh.";
 });
 </script>
 
