--- a/renungan.html
+++ b/renungan.html
@@ -1,47 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Renungan Harian</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-
 <h2>Renungan Harian</h2>
 <div id="renungan">Memuat...</div>
 
 <script>
-const url = "https://api.allorigins.win/get?url=" + 
-encodeURIComponent("https://renunganharian.net/feed/");
-
-fetch(url)
+fetch("data/renungan.json")
 .then(res => res.json())
 .then(data => {
-  const parser = new DOMParser();
-  const xml = parser.parseFromString(data.contents, "text/xml");
-  const items = xml.querySelectorAll("item");
-
   let output = "";
-  items.forEach((item, index) => {
-    if(index < 5){
-      output += `
-        <div class="card">
-          <h3>${item.querySelector("title").textContent}</h3>
-          <a href="${item.querySelector("link").textContent}" target="_blank">
-          Baca Selengkapnya
-          </a>
-        </div>
-      `;
-    }
+  data.forEach(item => {
+    output += `
+      <div class="card">
+        <h3>${item.judul}</h3>
+        <small>${item.tanggal}</small>
+        <p>${item.isi}</p>
+      </div>
+    `;
   });
-
   document.getElementById("renungan").innerHTML = output;
 })
-.catch(err => {
-  document.getElementById("renungan").innerHTML = 
-  "Gagal memuat renungan. Coba refresh.";
+.catch(() => {
+  document.getElementById("renungan").innerHTML = "Gagal memuat konten.";
 });
 </script>
-
-</body>
-</html>
