--- a/index.html
+++ b/index.html
@@ -3,26 +3,31 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pertumbuhan Iman</title>
-<link rel="manifest" href="manifest.json">
+<title>Pertumbuhan Iman Kristen</title>
 <link rel="stylesheet" href="style.css">
+<link rel="manifest" href="manifest.json">
 </head>
 <body>
+
 <header>
-  <h1>Pertumbuhan Iman Kristen</h1>
+<h1>Pertumbuhan Iman Kristen</h1>
 </header>
 
 <nav>
-  <a href="renungan.html">Renungan Harian</a>
-  <a href="kesaksian.html">Kesaksian</a>
-  <a href="lagu.html">Lagu Rohani</a>
+<a href="renungan.html">Renungan Harian</a>
+<a href="kesaksian.html">Kesaksian</a>
+<a href="lagu.html">Lagu Rohani</a>
 </nav>
 
 <section>
-  <h2>Selamat Datang</h2>
-  <p>Platform renungan, kesaksian, dan lagu rohani untuk membangun iman setiap hari.</p>
+<p>Platform pembinaan iman Kristen secara netral dan membangun.</p>
 </section>
 
-<script src="script.js"></script>
+<script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js");
+}
+</script>
+
 </body>
 </html>
