--- a/lagu.html
+++ b/lagu.html
@@ -2,25 +2,25 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Lagu Rohani Baru</title>
+<title>Lagu Rohani</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h2>Lagu Rohani Terbaru</h2>
+<h2>Lagu Rohani</h2>
 
 <div class="card">
-  <h3>Hidupku Adalah Penyembahan</h3>
-  <a href="https://www.youtube.com/results?search_query=Hidupku+Adalah+Penyembahan" target="_blank">
-  Tonton di YouTube
-  </a>
+<h3>Hidupku Adalah Penyembahan</h3>
+<a href="https://www.youtube.com/results?search_query=Hidupku+Adalah+Penyembahan" target="_blank">
+Tonton di YouTube
+</a>
 </div>
 
 <div class="card">
-  <h3>Goodness of God</h3>
-  <a href="https://www.youtube.com/results?search_query=Goodness+of+God+live+worship" target="_blank">
-  Tonton di YouTube
-  </a>
+<h3>Goodness of God</h3>
+<a href="https://www.youtube.com/results?search_query=Goodness+of+God+live" target="_blank">
+Tonton di YouTube
+</a>
 </div>
 
 </body>
