--- a/index.html
+++ b/index.html
@@ -5,29 +5,29 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pertumbuhan Iman Kristen</title>
 <link rel="stylesheet" href="style.css">
-<link rel="manifest" href="manifest.json">
 </head>
 <body>
 
-<header>
-<h1>Pertumbuhan Iman Kristen</h1>
+<header class="header">
+  <div class="logo-area">
+    <div>
+      <h1>Pertumbuhan Iman Kristen</h1>
+      <p class="tagline">Membangun Iman yang Dewasa dan Konsisten</p>
+    </div>
+  </div>
 </header>
 
-<nav>
-<a href="renungan.html">Renungan Harian</a>
-<a href="kesaksian.html">Kesaksian</a>
-<a href="lagu.html">Lagu Rohani</a>
+<nav class="navbar">
+  <a href="index.html">Beranda</a>
+  <a href="renungan.html">Renungan Harian</a>
+  <a href="kesaksian.html">Kesaksian</a>
+  <a href="lagu.html">Lagu Rohani</a>
 </nav>
 
-<section>
-<p>Platform pembinaan iman Kristen secara netral dan membangun.</p>
-</section>
-
-<script>
-if ("serviceWorker" in navigator) {
-  navigator.serviceWorker.register("service-worker.js");
-}
-</script>
+<main class="container">
+  <h2>Selamat Datang</h2>
+  <p>Platform pembinaan iman Kristen secara netral dan membangun.</p>
+</main>
 
 </body>
 </html>
