--- a/lagu.html
+++ b/lagu.html
@@ -7,21 +7,28 @@
 </head>
 <body>
 
-<h2>Lagu Rohani</h2>
+<header class="header">
+  <h1>Pertumbuhan Iman Kristen</h1>
+  <p class="tagline">Lagu Rohani</p>
+</header>
+
+<nav class="navbar">
+  <a href="index.html">Beranda</a>
+  <a href="renungan.html">Renungan Harian</a>
+  <a href="kesaksian.html">Kesaksian</a>
+  <a href="lagu.html">Lagu Rohani</a>
+</nav>
+
+<main class="container">
 
 <div class="card">
 <h3>Hidupku Adalah Penyembahan</h3>
-<a href="https://www.youtube.com/results?search_query=Hidupku+Adalah+Penyembahan" target="_blank">
+<a class="btn" href="https://www.youtube.com/results?search_query=Hidupku+Adalah+Penyembahan" target="_blank">
 Tonton di YouTube
 </a>
 </div>
 
-<div class="card">
-<h3>Goodness of God</h3>
-<a href="https://www.youtube.com/results?search_query=Goodness+of+God+live" target="_blank">
-Tonton di YouTube
-</a>
-</div>
+</main>
 
 </body>
 </html>
