--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 <body>
 
 <header class="header">
-  <div class="logo-area">
-    <div>
-      <h1>Pertumbuhan Iman Kristen</h1>
-      <p class="tagline">Membangun Iman yang Dewasa dan Konsisten</p>
+  <div class="container header-flex">
+    <div class="logo-area">
+      <img src="logo.png" alt="Logo" class="logo">
+      <div>
+        <h1>Pertumbuhan Iman Kristen</h1>
+        <p class="tagline">Membangun Iman yang Dewasa dan Konsisten</p>
+      </div>
     </div>
+    <nav>
+      <a href="index.html">Beranda</a>
+      <a href="renungan.html">Renungan</a>
+      <a href="kesaksian.html">Kesaksian</a>
+    </nav>
   </div>
 </header>
 
@@ -31,3 +39,4 @@
 
 </body>
 </html>
+
