--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pertumbuhan Iman Kristen</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Pertumbuhan Iman Kristen</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -25,18 +24,16 @@
   </div>
 </header>
 
-<nav class="navbar">
-  <a href="index.html">Beranda</a>
-  <a href="renungan.html">Renungan Harian</a>
-  <a href="kesaksian.html">Kesaksian</a>
-  <a href="lagu.html">Lagu Rohani</a>
-</nav>
+<div class="container">
+  <h2 class="section-title">Selamat Datang</h2>
+  <div class="card">
+    <p>Portal ini menyediakan renungan harian dan kesaksian yang diperbarui secara otomatis.</p>
+  </div>
+</div>
 
-<main class="container">
-  <h2>Selamat Datang</h2>
-  <p>Platform pembinaan iman Kristen secara netral dan membangun.</p>
-</main>
+<footer class="footer">
+  © 2026 Pertumbuhan Iman Kristen
+</footer>
 
 </body>
 </html>
-
