--- a/lagu.html
+++ b/lagu.html
@@ -44,22 +44,22 @@
   <h2 class="section-title">Lagu Rohani Pilihan</h2>
 
   <div class="card">
-    <h3>Bapa Engkau Sungguh Baik</h3>
+    <h3>Oceans (Hillsong UNITED)</h3>
     <div class="video-container">
       <iframe 
-        src="https://www.youtube.com/embed/6X7bPj7V7mA" 
-        frameborder="0" 
+        src="https://www.youtube.com/embed/dy9nwe9_xzw"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
       </iframe>
     </div>
   </div>
 
   <div class="card">
-    <h3>Ku Percaya JanjiMu</h3>
+    <h3>Way Maker</h3>
     <div class="video-container">
       <iframe 
-        src="https://www.youtube.com/embed/0LwcvjNJnWA" 
-        frameborder="0" 
+        src="https://www.youtube.com/embed/iJCV_2H9xD0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
       </iframe>
     </div>
