--- a/lagu.html
+++ b/lagu.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Lagu Rohani</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    .video-container {
-      position: relative;
-      padding-bottom: 56.25%;
-      height: 0;
-      overflow: hidden;
-      border-radius: 10px;
-    }
-    .video-container iframe {
-      position: absolute;
-      top:0;
-      left:0;
-      width:100%;
-      height:100%;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Lagu Rohani</title>
+<link rel="stylesheet" href="style.css">
+<style>
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+.video-container iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+</style>
 </head>
 <body>
 
@@ -40,36 +36,30 @@
   </div>
 </header>
 
-<div class="container">
-  <h2 class="section-title">Lagu Rohani Pilihan</h2>
-
-  <div class="card">
-    <h3>Oceans (Hillsong UNITED)</h3>
-    <div class="video-container">
-      <iframe 
-        src="https://www.youtube.com/embed/dy9nwe9_xzw"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-      </iframe>
-    </div>
-  </div>
-
-  <div class="card">
-    <h3>Way Maker</h3>
-    <div class="video-container">
-      <iframe 
-        src="https://www.youtube.com/embed/iJCV_2H9xD0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-      </iframe>
-    </div>
-  </div>
-
-</div>
+<div class="container" id="content"></div>
 
 <footer class="footer">
   © 2026 Pertumbuhan Iman Kristen
 </footer>
+
+<script>
+fetch("data/lagu.json")
+.then(res => res.json())
+.then(data => {
+
+  document.getElementById("content").innerHTML = `
+    <h2 class="section-title">${data.judul}</h2>
+    <div class="card">
+      <div class="video-container">
+        <iframe 
+          src="https://www.youtube.com/embed/${data.video_id}"
+          allowfullscreen>
+        </iframe>
+      </div>
+    </div>
+  `;
+});
+</script>
 
 </body>
 </html>
