--- a/index.html
+++ b/index.html
@@ -252,7 +252,6 @@
                     <div class="mb-6">
                         <span class="date-badge-verse px-4 py-2 rounded-full text-sm font-medium inline-flex items-center gap-2">
                             <i class="fas fa-calendar-day"></i>
-                            <span id="verse-day-info">Hari ke-1 dari 365</span>
                         </span>
                     </div>
 
@@ -404,7 +403,7 @@
                         <div class="bg-green-50 border border-green-200 rounded-lg p-3 mt-4">
                             <p class="text-xs text-green-800 text-center">
                                 <i class="fas fa-info-circle mr-1"></i>
-                                Permohonan doa akan langsung terkirim ke WhatsApp: <strong>0812-2504-7599</strong>
+                                Permohonan doa akan langsung terkirim ke WhatsApp.
                             </p>
                         </div>
                     </form>
@@ -786,3 +785,4 @@
     </script>
 </body>
 </html>
+
